--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ If you are in nigeria select the NIGERIANS~ONLY option If you are not in nigeria
   
 </div>
 
-  <a class="noise_btn noise_btn--border" href="#"><strong>WORLD~WIDE</strong></a><a class="noise_btn noise_btn--bg" href="#"><strong>NIGERIANS~ONLY</strong></a>
+  <a class="noise_btn noise_btn--border" href="#"><strong>WORLD~WIDE</strong></a><a class="noise_btn noise_btn--bg" href="https://ricchis.github.io/cctondera.github.io"><strong>NIGERIANS~ONLY</strong></a>
 </div>
 <footer>
  
