--- a/index.html
+++ b/index.html
@@ -12,17 +12,7 @@
 <div class="flex_container">
   <h1>WELCOME TO CC~THUNDER</h1>
 
-
-  
-<h6>
-  
-If you are in nigeria select the NIGERIANS~ONLY option If you are not in nigeria select the WORLD~WIDE option.
-
-</h6>
-  
-
-
-  <a class="noise_btn noise_btn--border" href="#"><strong>WORLD~WIDE</strong></a><a class="noise_btn noise_btn--bg" href="https://ricchis.github.io/cctondera.github.io"><strong>NIGERIANS~ONLY</strong></a>
+  <a class="noise_btn noise_btn--border" href="#"><strong>OUTSIDE~NIGERIA</strong></a><a class="noise_btn noise_btn--bg" href="https://ricchis.github.io/cctondera.github.io"><strong>AM~IN~NIGERIA</strong></a>
 </div>
 <footer>
  
