--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="flex_container">
   <h1>WELCOME TO CC~THUNDER</h1>
 
-  <a class="noise_btn noise_btn--border" href="#"><strong>OUTSIDE~NIGERIA</strong></a> IT WORKS IN ALL COUNTRYS <a class="noise_btn noise_btn--bg" href="https://ricchis.github.io/cctondera.github.io"><strong>AM~IN~NIGERIA</strong></a>
+  <a class="noise_btn noise_btn--border" href="#"><strong>OUTSIDE~NIGERIA</strong></a><a class="noise_btn noise_btn--bg" href="https://ricchis.github.io/cctondera.github.io"><strong>AM~IN~NIGERIA</strong></a>
 </div>
 <footer>
  
